--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -4,6 +4,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
+  background-image: linear-gradient(70deg, #1270E5, #933EC4);
+   
 }
 
 .summery {
